--- a/assets/css/components/homepage/components/_services.scss
+++ b/assets/css/components/homepage/components/_services.scss
@@ -102,10 +102,6 @@
         }
       }
 
-      &.inactive .service-description {
-        display: none;
-      }
-
       .open-close-accordion .plus, .open-close-accordion .minus {
         position: absolute;
       }
